--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Java\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Java\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\DELL\\Documents\\NetBeansProjects\\New Folder\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.mssql-jdbc-13.2.0.jre11.jar=JDBCFile\\mssql-jdbc-13.2.0.jre11.jar
 includes=**
 j2ee.compile.on.save=true
@@ -48,8 +48,8 @@ javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -69,7 +69,7 @@ javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=JDK_21
+platform.active=JDK_17
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
