--- a/web/WEB-INF/ConnectDB.properties
+++ b/web/WEB-INF/ConnectDB.properties
@@ -1,3 +1,3 @@
-url=jdbc:sqlserver://localhost:1433;databaseName=ASSIGMENT;trustServerCertificate=true
+url=jdbc:sqlserver://localhost:1433;databaseName=PRJ_ASSIGNMET;trustServerCertificate=true
 userID=sa
 password=123
